force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/OCE__GeneralEventEmployeeAttendee__c.object-meta.xml
<CustomObject>
    <description>Junction object between general events and users.</description>
    <label>General Event Employee Attendee</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>General Event Employee Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Event Employee Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>