force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__Attendee__c.field-meta.xml
<CustomField>
    <fullName>OCE__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Event Attendee (User)</description>
    <inlineHelpText>Reference to Event Attendee (User)</inlineHelpText>
    <label>Event Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GeneralEventEmployeeAttendees</relationshipName>
    <type>Lookup</type>
</CustomField>