force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__AttendeeOrder__c.field-meta.xml
<CustomField>
    <fullName>OCE__AttendeeOrder__c</fullName>
    <description>Stores Default sort order</description>
    <inlineHelpText>Stores Default sort order</inlineHelpText>
    <label>Attendee Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>