force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__GeneralEvent__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeneralEvent__c</fullName>
    <description>Reference to corresponding General Event</description>
    <inlineHelpText>Reference to corresponding General Event</inlineHelpText>
    <label>General Event</label>
    <referenceTo>OCE__GeneralEvent__c</referenceTo>
    <relationshipLabel>GeneralEventEmployeeAttendees</relationshipLabel>
    <relationshipName>GeneralEventEmployeeAttendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>