force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedDate__c</fullName>
    <description>Timestamp when record has been created on mobile device. Differ from standard SF CreatedDate field, which holds timestamp when record has been actually uploaded/created on SF side (it may happen with some delay after mobile creation).</description>
    <inlineHelpText>Timestamp when record has been created on mobile device. Differ from standard SF CreatedDate field, which holds timestamp when record has been actually uploaded/created on SF side (it may happen with some delay after mobile creation).</inlineHelpText>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>