force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__OfflineLastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User initiated record update from mobile. Differ from standard SF LastModifiedById field, which holds user actually conducting operation in SF (could be the same as mobile, but not necessary)</description>
    <inlineHelpText>User initiated record update from mobile. Differ from standard SF LastModifiedById field, which holds user actually conducting operation in SF (could be the same as mobile, but not necessary)</inlineHelpText>
    <label>Offline Last Modified By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GeneralEventEmployeeAttendees2</relationshipName>
    <type>Lookup</type>
</CustomField>