force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__OfflineLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedDate__c</fullName>
    <description>Timestamp when record has been updated on mobile device. Differ from standard SF LastModifiedDate field, which holds timestamp when record has been actually modified on SF side (it may happen with some delay after mobile modificatio).</description>
    <inlineHelpText>Timestamp when record has been updated on mobile device. Differ from standard SF LastModifiedDate field, which holds timestamp when record has been actually modified on SF side (it may happen with some delay after mobile modificatio).</inlineHelpText>
    <label>Offline Last Modified Date</label>
    <type>DateTime</type>
</CustomField>