force-app/main/default/objects/OCE__GeneralEventEmployeeAttendee__c/fields/OCE__OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueId__c</fullName>
    <description>It will be in format {SObjectType}-{UUID}. Globally unique string that identifies a offline created record.</description>
    <externalId>true</externalId>
    <inlineHelpText>It will be in format {SObjectType}-{UUID}. Globally unique string that identifies a offline created record.</inlineHelpText>
    <label>Offline Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>